--- a/style.css
+++ b/style.css
@@ -254,7 +254,8 @@ header nav {
 
 @media screen and (max-width: 768px) {
     .slider .list .item .content {
-        width: 80%;
+        margin-top: 120px;
+        width: 90%;
     }
 
     .slider .list .item .content h2 {
